--- a/mvt/src/main/resources/test.html
+++ b/mvt/src/main/resources/test.html
@@ -39,8 +39,8 @@
             "sources": {},
             "layers": []
         },
-        center: [102.712251, 25.040609],
-        zoom: 4
+        center: [107.15347967396582, 33.780743289243844],
+        zoom: 3
     });
     map.on('load', function () {
         //添加刚才发布的mvt数据源
